manage-banner: fixed jumping button

--- a/css/jetpack-banners.css
+++ b/css/jetpack-banners.css
@@ -146,7 +146,9 @@
 }
 #message .jp-banner__button:active {
   outline: none;
-  top: 2px;
+  -webkit-transform: translateY(2px);
+  -ms-transform: translateY(2px);
+  transform: translateY(2px);
   box-shadow: 0 0px 0 #3e6c20, 0 0 0 rgba(0, 0, 0, 0.2);
 }
 #message .jp-banner__button:active:after {
